[package]
name = "arkdata"
version = "2.0.0"
authors = ["astral4 <88992929+astral4@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/astral4/arkdata"
repository = "https://github.com/astral4/arkdata"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
again = { version = "0.1.2", default-features = false, features = ["rand"] }
ahash = { version = "0.8.11", features = ["serde"] }
anyhow = "1.0.81"
bytes = "1.5.0"
glob = "0.3.1"
image = { version = "0.25.0", default-features = false, features = ["png"] }
once_cell = "1.19.0"
pyo3 = { version = "0.20.3", default-features = false, features = ["auto-initialize"] }
rayon = "1.9.0"
reqwest = { version = "0.12.0", default-features = false, features = ["blocking", "http2", "json", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.114"
tap = "1.0.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.12"
zip = "0.6.6"

[dev-dependencies]
uuid = { version = "1.8.0", default-features = false, features = ["v4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
