[package]
name = "arkdata"
version = "2.0.0"
authors = ["astral4 <88992929+astral4@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/astral4/arkdata"
repository = "https://github.com/astral4/arkdata"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
again = { version = "0.1.2", default-features = false, features = ["rand"] }
ahash = { version = "0.8.11", features = ["serde"] }
anyhow = "1.0.86"
bytes = "1.7.1"
glob = "0.3.1"
image = { version = "0.25.2", default-features = false, features = ["png"] }
pyo3 = { version = "0.22.2", default-features = false, features = ["auto-initialize"] }
rayon = "1.10.0"
reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "brotli", "gzip", "http2", "json", "rustls-tls"] }
serde = { version = "1.0.209", features = ["derive", "rc"] }
serde_json = "1.0.127"
tap = "1.0.1"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
zip = "2.2.0"

[dev-dependencies]
uuid = { version = "1.10.0", default-features = false, features = ["v4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
