[package]
name = "arkdata"
version = "3.0.0"
authors = ["Kyle Chen"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/astral4/arkdata"
repository = "https://github.com/astral4/arkdata"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
again = { version = "0.1.2", default-features = false, features = ["rand"] }
ahash = { version = "0.8.11", features = ["serde"] }
anyhow = "1.0.95"
bytes = "1.9.0"
glob = "0.3.2"
image = { version = "0.25.5", default-features = false, features = ["png"] }
pyo3 = { version = "0.23.3", default-features = false, features = ["auto-initialize"] }
rayon = "1.10.0"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "brotli", "gzip", "http2", "json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.135"
tap = "1.0.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
zip = "2.2.2"

[dev-dependencies]
uuid = { version = "1.11.0", default-features = false, features = ["v4"] }

[lints.rust]
async_fn_in_trait = "allow"
ffi_unwind_calls = "warn"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "forbid"
non_local_definitions = "warn"
nonstandard_style = { level = "deny", priority = 1 }
redundant_lifetimes = "deny"
rust_2018_idioms = { level = "deny", priority = 1 }
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[lints.clippy]
module_name_repetitions = { level = "allow", priority = 1 }
pedantic = "warn"

[profile.release]
strip = true
lto = true
codegen-units = 1
