[tool.poetry]
name = "arkdata"
version = "2.0.0"
description = "A program for fetching Arknights game data"
license = "AGPL-3.0-or-later"
authors = ["astral4 <88992929+astral4@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/astral4/arkdata"
repository = "https://github.com/astral4/arkdata"

[tool.poetry.dependencies]
python = "^3.12"
UnityPy = "^1.10.14"
Pillow = "^10.3.0"
pycryptodome = "^3.20.0"
pymongo = "^4.7.3"
fsb5 = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
