[project]
name = "arkdata"
version = "3.0.0"
description = "A program for fetching Arknights game data"
license = {file = "LICENSE"}
authors = [{name = "Kyle Chen"}]
readme = "README.md"
urls = {Repository = "https://github.com/astral4/arkdata"}
requires-python = ">=3.13"
dependencies = [
    "fsb5>=1.0",
    "pillow>=11.1.0",
    "pycryptodome>=3.21.0",
    "pymongo>=4.10.1",
    "unitypy>=1.20.16",
]
